# _NodeWALKER

./: .gitignore  LICENSE.md  README.md  _NodeWALKER.spec  pyproject.toml  requirements.txt  run.bat  setup_env.bat
.claude/: settings.local.json
_logs/: NodeWalker_ReportOnInference.txt  _NodeWALKER_filedump.txt  _NodeWALKER_project_folder_tree.txt  _project_mapper_config.json
src/: __init__.py  app.py  test_walker.py
src/_logs/: _project_mapper_config.json  src_filedump.txt  src_project_folder_tree.txt
src/ui/: __init__.py  circuit_window.py  event_bus.py  main_window.py  theme.py
src/ui/panels/: __init__.py  airlock_pane.py  chat_pane.py  explorer_pane.py  patch_approval_modal.py  preview_pane.py  prompt_library_modal.py  settings_modal.py  tool_palette.py  view_palette.py
src/walker/: __init__.py  activation_store.py  activation_types.py  antidata.py  app_settings.py  cas.py  chunks.py  db.py  graph.py  llm_agent.py  manifest.py  model_validator.py  mutation_prompt.py  notes.py  patcher.py  policy.py  prompt_library.py  scoring.py  session_db.py  signature.py  structure.py  types.py  walker.py  world_profile.py
src/walker/forensics/: __init__.py  pipeline.py  referents.py  router.py  types.py
src/walker/gravity/: __init__.py  decomposer.py  engine.py  packer.py  pipeline.py  sufficiency.py  types.py
