[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "nodewalker"
version = "0.1.0"
description = "NodeWALKER - Tripartite Cartridge Traversal Engine with Circuit Highlighting"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = {text = "MIT"}
authors = [
    {name = "NodeWALKER Team"}
]
keywords = ["code-analysis", "cartridge", "circuit-highlighting", "llm", "ollama"]

dependencies = [
    "ollama>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "pylint>=2.0.0",
]

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.pylint.messages_control]
disable = ["C0111"]  # missing-docstring
